# ipd-imgt-hla-python-wrapper

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
archives/: response.json
ipd_imgt_hla_python_wrapper/: main.py  test_db_connection.py  test_json_content.py
ipd_imgt_hla_python_wrapper/services/: allele_services.py  allele_settings.py
src/ipd_imgt_hla_python_wrapper/: urls.py
src/ipd_imgt_hla_python_wrapper/services/: allele_services.py  allele_settings.py
sundbox/: Experiment with polars.py  Tryout using marimo as a web app.py  test_json_content.py
