[project]
name = "ipd-imgt-hla-python-wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "marimo>=0.15.2",
    "polars>=1.33.0",
    "ruff>=0.12.11",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["ipd_imgt_hla_python_wrapper"]
include = ["*"]

[project.scripts]
ipd-imgt-hla-pytho-wrapper = "ipd_imgt_hla_python_wrapper:main"
